<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".DemographicInfoActivity" android:background="@drawable/background">

    <TextView
            android:text="@string/textview9text"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/actor"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="56dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView9"/>

    <TextView
            android:text="@string/tvfastfoodtext"
            android:textAlignment="center"
            android:textColor="@android:color/white"

            android:fontFamily="@font/actor"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/etSleep"
            android:backgroundTint="@android:color/white"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/textView14"/>

    <EditText
            android:id="@+id/etFastFood"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:textAlignment="center"
            android:inputType="number"
            android:fontFamily="@font/actor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView14" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <TextView
            android:text="@string/tvexercisetext"
            android:textColor="@android:color/white"
            android:textSize="20sp"

            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:id="@+id/textView11" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <EditText
            android:id="@+id/etExercise"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"

            android:textAlignment="center"
            android:fontFamily="@font/actor"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <TextView
            android:text="@string/tvsleeptext"
            android:textAlignment="center"
            android:fontFamily="@font/actor"
            android:textColor="@android:color/white"
            android:textSize="20sp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/etWork"
            android:id="@+id/textView13" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <EditText
            android:id="@+id/etSleep"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"

            android:fontFamily="@font/actor"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:visibility="visible"/>

    <TextView
            android:text="@string/tvworktext"
            android:textAlignment="center"
            android:fontFamily="@font/actor"
            android:textColor="@android:color/white"
            android:textSize="20sp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etExercise" android:id="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <EditText
            android:id="@+id/etWork"
            android:textAlignment="center"
            android:fontFamily="@font/actor"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"

            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <Button
            android:id="@+id/btnUpdateLifeXP"
            android:text="@string/btnUpdateLifeExpectancyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:textSize="18sp" android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" android:fontFamily="@font/actor" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etFastFood"/>

    <TextView
            android:id="@+id/tvUpdatedLifeExpNum"
            android:textColor="@android:color/white"
            android:fontFamily="@font/rock_salt"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/btnUpdateLifeXP" android:layout_marginTop="8dp"
            android:layout_marginBottom="73dp" app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:id="@+id/btnContinue"
            android:textColor="@color/design_default_color_primary_dark"

            android:fontFamily="@font/actor"
            android:text="@string/btnContinueText"
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUpdatedLifeExpNum"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:textSize="18sp" android:layout_marginTop="8dp"/>
</android.support.constraint.ConstraintLayout>